API REST con Sanctum funcionando: login, token, proteccion de rutas, respuestas JSON en errores 401, se supone que da los errores y sigo luchando con esto
